[package]
name = "hackmd-rs"
description = "Rust HackMD client"
version = "0.3.2"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/hackmd-rs"
repository = "https://github.com/scrabsha/hackmd-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "get-me"
path = "examples/get-me.rs"

[[example]]
name = "get-notes"
path = "examples/get-notes.rs"

[[example]]
name = "create-note"
path = "examples/create-note.rs"

[[example]]
name = "get-teams"
path = "examples/get-teams.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
